1. Collection API Улучшения[#104740] (#39)